--- a/src/components/Column.css
+++ b/src/components/Column.css
@@ -6,8 +6,15 @@
 .column-header {
     display: flex;
     align-items: center;
+	justify-content: space-between;
     gap: 8px;
     margin-bottom: 16px;
+}
+
+.column-header .clm-sub {
+	display: flex;
+	align-items: center;
+	gap: 8px;
 }
 
 .column-header h2 {
